gipfel ChangeLog
=================

gipfel-0.3.0
* Use exiv2 library for image metadata reading and writing.
  (initial patch by Konrad Golling).
* Make gipfel compile on [MinGW](http://www.mingw.org/)

gipfel-0.2.9
* Add rpm spec file.
* fsync() temporary file before rename().
* Add "Find Peak" dialog (right click on image).
* Show height in search dialog to distinguish peaks with equal names.
* Added "File->Screen Dump" feature.
* Improved label placing.
* Fix long standing bug with panoramic projection if one known peak
  is "left" and one is "right" of north.

gipfel-0.2.8
* Fix issue with image saving on some platforms (reported by David Mitchell).
* Fix crash in stitching mode.
* Add a note to the README about generating a data file for the USA from
  [USGS](http://geonames.usgs.gov/domestic/download_data.htm) data
  (pointed out by David Mitchell).

gipfel-0.2.7
* Import data from http://www.viewfinderpanoramas.org/ with the
  kind permission of Jonathan de Ferranti. Thanks a lot!
  This brings the number of peaks in the default data file to
  more than 21000!
* Change display style a bit and reduce font size to make room
  for all the new peaks from the updated data file.
* Show height and distance of the peak which is currently under
  the mouse.

gipfel-0.2.6
* Improve image saving. It is now possible to overwrite the current
  image file.
* Install README and NEWS file to $PREFIX/share/doc/gipfel/.
* Change semantics of -t option.
  -t now requires a file just as -j does.
  To generate multiple TIFF files as input to enblend, just do
  for i in *.jpg; do gipfel -s -b -t tiff/$i $i; done
  This simplifies the code and allows to parallelize stitching on
  multicore systems.
* Add simple README viewer to the Help menu.

gipfel-0.2.5
* Improved stitching speed.
* Fixed a bug with tiff file generation in stitching mode.
* Updated README file.

gipfel-0.2.4
* Fix another issue in the rectilinear projection code
   that affected non-horizontally shot pictures.